src/pages/Home/styles.css
*{
    margin: 0;
    padding: 0;
}
.line-chart {
    margin-bottom: 30px;
}
.content-container {
    width: 80%;
    display: flex;
    flex-direction: column;
    padding-left: 30px;
    box-sizing: border-box;
    padding-top: 50px;
    padding-bottom: 50px;
}
.stack-bar-chart-header .title {
    font-size: 20px;
}
.content-container .line-chart, .content-container .stack-bar-chart{
    width: 1000px;
    padding: 15px;
    box-shadow: 0px 0px 56px #00000021;
}
.stack-bar-chart-header {
    display: flex;
    justify-content: space-between;
    padding-bottom: 30px;
}
.stack-bar-filter {
    display: flex;
}
.stack-bar-filter label{
    padding-right: 10px;
}
.page-container {
    display: flex;
}
.all-complains-container {
    margin-bottom: 20px;
}
.complains-suggestions {
    background: #EBF1F6 0% 0% no-repeat padding-box;
    padding: 5px;
    border-bottom: 2px solid #007AFF;
}
.complains-suggestions .com-text {
    font-size: 16px;
}
.complains-suggestions .com-per {
    font-weight: bold;
} 
.complains-suggestions-section {
    display: flex;
}
.complains-suggestions {
    margin-right: 10px;
}

.react-date-picker .react-daterange-picker__inputGroup{
    min-width: 200px;
}
.react-date-picker input{
    min-width: 20px
}
.filter-by-date {
    padding-right: 10px;
}

.content-container .line-chart, .content-container .simple-bar-chart{
    width: 1000px;
    padding: 15px;
    box-shadow: 0px 0px 56px #00000021;
    margin: 20px 0;
}

